--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>William's Inoformation Super-Highway Site</title>
+        <title>William's Inforformation Super-Highway Site</title>
        <style>
             body {
-                background: rgb(55, 55, 55);
+                background: rgb(75, 75, 75);
                 color: rgb(45, 45, 45);
                 padding: 0px;
                 font-family: arial;
@@ -50,7 +50,7 @@
     
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(255, 255, 255);
                 display: flex;
                 border: 2px ;
                  border-radius: 0px 0px 15px 15px;
@@ -79,8 +79,8 @@
             <nav>
                 <h>William's Totally Rad Information Super-Highway Site</h>
                 <ul>
-                    <li><a href="index.html"></a></li>
-                    <li><a href="portfolio.html"></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
             </nav>
             
@@ -103,7 +103,7 @@
                            <li>I like art</li>
                            <li>I like video games/video game design</li>
                            <li>I like films/film production</li>
-                           <li>Hey, bullet points!</li>
+                           <li>Also Mark Zuckerberg</li>
                            </ul>
                     </section>
                 </div>
